--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600&display=swap');
 
 * {
   box-sizing: border-box;
@@ -8,4 +8,43 @@ body, html {
   margin: 0px;
   padding: 0px;
   font-family: 'Poppins', sans-serif;
+}
+
+ul {
+  font-weight: bold;
+  list-style-type: none;
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+}
+
+li {
+  display: inline-block;
+}
+
+li a {
+  color: #453d3d;
+  padding: 20px 50px 20px;
+  text-decoration: none;
+}
+
+li a:hover {
+  color: rgba(255, 0, 0, 0.65);
+}
+
+
+.logo {
+  position: fixed;
+  top: 13px;
+  left: 20px;
+  width: 100px;
+  height: auto;
+}
+
+.navBar {
+  font-size: 24px;
+  background-color: #61F69B;
+  position: fixed;
+  padding: 20px;
+  width: 100%;
 }
