finished homepage and added other pages

--- a/css/workouts-style.css
+++ b/css/workouts-style.css
@@ -52,34 +52,31 @@ li a:hover {
 }
 
 .mainContainer {
+  padding-top: 50px;
   display: flex;
   flex-direction: column;
 }
-.banner {
-  background-image: url("../assets/banner.png");
-  background-size: 100%;
-  font-size: 40px;
-  color: white;
-  padding: 40px;
-  display: flex;
-  text-align: center;
-  justify-content: center;
 
+h1 {
+  font-size: 64px;
+  text-align: center;
+  color: black;
 }
 
 .container {
-  width: 30%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+  width: 100%;
+  display: flex;
 }
 
+.container img{
+    border-radius: 20px;
+}
 .threeCard {
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 2fr);
   grid-auto-rows: auto;
   grid-gap: 20px;
-  padding: 50px;
+
 }
 
 p {
@@ -92,43 +89,12 @@ p {
   color: white;
   border-radius: 20px;
   box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.50);
-  padding: 50px 0 50px;
+  padding: 50px;
   transition: all .2 ease-in-out;
-}
-
-.card:hover {
-  transform: scale(1.2);
-}
-
-h2 {
-  font-size: 34px;
 }
 
 .text {
   text-align: center;
   line-height: 35px;
   font-size: 20px;
-}
-
-.twoUp {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  background-color: #85C6FA;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' viewBox='0 0 40 40'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23000000' fill-opacity='0.20'%3E%3Cpath d='M0 38.59l2.83-2.83 1.41 1.41L1.41 40H0v-1.41zM0 1.4l2.83 2.83 1.41-1.41L1.41 0H0v1.41zM38.59 40l-2.83-2.83 1.41-1.41L40 38.59V40h-1.41zM40 1.41l-2.83 2.83-1.41-1.41L38.59 0H40v1.41zM20 18.6l2.83-2.83 1.41 1.41L21.41 20l2.83 2.83-1.41 1.41L20 21.41l-2.83 2.83-1.41-1.41L18.59 20l-2.83-2.83 1.41-1.41L20 18.59z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
-  padding: 10px;
-}
-
-.pic {
-  margin-left: 50px;
-  width: 80%;
-  height: auto;
-  border-radius: 20px;
-}
-
-.caption {
-  color: white;
-  font-size: 70px;
-  width: 50%;
-  text-align: left;
 }
