--- a/css/workouts-style.css
+++ b/css/workouts-style.css
@@ -12,7 +12,7 @@ body, html {
   background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23ececec' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
-ul {
+.navLinks{
   font-weight: bold;
   list-style-type: none;
   margin: 0px;
@@ -20,11 +20,11 @@ ul {
   text-align: center;
 }
 
-li {
+.navLinks li {
   display: inline-block;
 }
 
-li a {
+.navLinks li a {
   color: #453d3d;
   padding: 20px 50px 20px;
   text-decoration: none;
@@ -63,6 +63,10 @@ h1 {
   color: black;
 }
 
+h2 {
+  line-height: 40px;
+}
+
 .container {
   width: 100%;
   display: flex;
@@ -70,6 +74,8 @@ h1 {
 
 .container img{
     border-radius: 20px;
+    width: 100%;
+
 }
 .threeCard {
   display: grid;
@@ -77,6 +83,11 @@ h1 {
   grid-auto-rows: auto;
   grid-gap: 20px;
 
+}
+
+.text ul {
+  text-align: left;
+  font-weight: bold;
 }
 
 p {
@@ -97,4 +108,65 @@ p {
   text-align: center;
   line-height: 35px;
   font-size: 20px;
+}
+
+h3 {
+  text-align: center;
+  font-size: 36px;
+}
+/* Style the button that is used to open and close the collapsible content */
+.collapsible, .collapsible2, .collapsible3 {
+  background-color: #61F69B;
+  font-weight: bold;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: center;
+  font-size: 24px;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.collapsible:hover, .collapsible2:hover, .collapsible3:hover {
+  background-color:  #20f272;
+}
+
+/* Style the collapsible content. Note: hidden by default */
+.content, .content2, .content3 {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #85C6FA;
+}
+
+
+.twoUp {
+  display: flex;
+
+}
+.pic {
+  width: 100%;
+  height: auto;
+}
+
+.description {
+  width: 100%;
+}
+.description li {
+
+  font-size: 24px;
+  line-height: 40px;
+}
+
+.image {
+  width: 100%;
+  border-radius: 24px;
+  border: inset;
+
+}
+
+h4 {
+  text-align: center;
+  font-size: 36px;
 }
