--- a/css/food-style.css
+++ b/css/food-style.css
@@ -9,7 +9,7 @@ body, html {
   padding: 0px;
   font-family: 'Poppins', sans-serif;
   background-color: #d88b7b;
-  background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23ececec' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+    background-image: url("data:image/svg+xml,%3Csvg width='42' height='44' viewBox='0 0 42 44' xmlns='http://www.w3.org/2000/svg'%3E%3Cg id='Page-1' fill='none' fill-rule='evenodd'%3E%3Cg id='brick-wall' fill='%23ececec' fill-opacity='0.4'%3E%3Cpath d='M0 0h42v44H0V0zm1 1h40v20H1V1zM0 23h20v20H0V23zm22 0h20v20H22V23z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 ul {
@@ -45,7 +45,7 @@ li a:hover {
 
 .navBar {
   font-size: 24px;
-  background-color: #61F69B;
+  background-color: #79FD86;
   position: fixed;
   padding: 20px;
   width: 100%;
@@ -69,9 +69,8 @@ h2 {
 
 .twoUp {
   display: flex;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 20px;
+  padding: 20px 20px 10px 20px;
+
 }
 
 .image{
@@ -101,7 +100,8 @@ h2 {
   line-height: 36px;
   font-size: 24px;
   text-align: justify;
-  background-color: #85C6FA;
+  background-color: #85c6fa;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='Artboard-5' fill='%23ffffff' fill-opacity='0.19' fill-rule='nonzero'%3E%3Cpath d='M6 18h12V6H6v12zM4 4h16v16H4V4z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   border-radius: 25px 0px 0px 25px;
   padding: 0px 10px 0px 10px;
   width: 100%;
@@ -115,7 +115,8 @@ h2 {
   line-height: 36px;
   font-size: 24px;
   text-align: justify;
-  background-color: #85C6FA;
+  background-color: #85c6fa;
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='36' height='72' viewBox='0 0 36 72'%3E%3Cg fill-rule='evenodd'%3E%3Cg fill='%23ffffff' fill-opacity='0.19'%3E%3Cpath d='M2 6h12L8 18 2 6zm18 36h12l-6 12-6-12z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
   border-radius: 0px 25px 25px 0px;
   padding: 0px 10px 0px 10px;
   width: 100%;
