--- a/css/style.css
+++ b/css/style.css
@@ -58,7 +58,7 @@ li a:hover {
 .banner {
   background-image: url("../assets/banner.png");
   background-size: 100%;
-  padding-top: 10px;
+  padding-top: 50px;
   font-size: 40px;
   color: white;
   display: flex;
@@ -91,7 +91,7 @@ p {
   color: white;
   border-radius: 20px;
   box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.50);
-  padding: 50px 0 50px;
+  padding: 50px;
 
 }
 
